@@ -36,7 +36,7 @@ sig
   val exe: T -> T
   val expand: T -> T
   val file_name: T -> string
-  val smart_implode: T -> string
+  val implode_symbolic: T -> string
   val position: T -> Position.T
   eqtype binding
   val binding: T * Position.T -> binding
@@ -235,10 +235,11 @@ val expand = rep #> maps eval #> norm #> Path;
 val file_name = implode_path o base o expand;
 
 
-(* smart implode *)
+(* implode wrt. given directories *)
 
-fun smart_implode path =
+fun implode_symbolic path =
   let
+    val directories = rev (space_explode ":" (getenv "ISABELLE_DIRECTORIES"));
     val full_name = implode_path (expand path);
     fun fold_path a =
       (case try (implode_path o expand o explode_path) a of
@@ -250,12 +251,12 @@ fun smart_implode path =
             | NONE => NONE)
       | NONE => NONE);
   in
-    (case get_first fold_path ["$AFP", "~~", "$ISABELLE_HOME_USER", "~"] of
+    (case get_first fold_path directories of
       SOME name => name
     | NONE => implode_path path)
   end;
 
-val position = Position.file o smart_implode;
+val position = Position.file o implode_symbolic;
 
 
 (* binding: strictly monotonic path with position *)
